--- a/sass/pelea.scss
+++ b/sass/pelea.scss
@@ -32,12 +32,13 @@
     
     .hp {
         display: flex;
-        flex-direction: row;
-        gap: 1060px;
-        margin-left: 40px;
-        margin-right: 40px;
+        justify-content: space-around;
+        text-align: center;
         margin-top: 10px;
         position: absolute;
+        width: 100%;
+        gap: 600px;
+        z-index: 20;
 
         .icono {
             display: flex;
@@ -48,26 +49,38 @@
             .luffy_icono {
                 position: relative;
                 border-radius: 50px;
+                margin-left: 10px;
+                width: 100px;
+                height: auto;
             }
             .luffy_hp {
                 display: flex;
                 flex-direction: row;
-                z-index: 20;
             }
             .hp_tarjeta {
-                background-color: firebrick;
-                border-radius: 5px;
-                padding: 5px;
+                font-family: 'Noto Serif Georgian', serif;
+                background-color: #AE0A0A;
+                border: 5px solid black;
+                border-style:groove;
+                border-radius: 10px;
+                padding: 10px;
+                width: 200px;
+
+                .stats {
+                    display: flex;
+                    justify-content: space-between;
+                }
             }
 
             .katakuri_icono {
                 border-radius: 50px;
-                z-index: 20;
+                width: 100px;
+                height: auto;
             }
             .katakuri_hp {
                 display: flex;
                 flex-direction: column;
-                z-index: 20;
+                width: 300px;
             }
         }
     }
